--- a/opm/templates/adminauthentication/adminAuthentication.html
+++ b/opm/templates/adminauthentication/adminAuthentication.html
@@ -11,7 +11,7 @@
 
 </head>
 
-    <title> OPMS - Log In </title>
+    <title> OPMS - Admin Authentication </title>
     <link rel="icon" href="{% static 'img/Logo_Colored.png' %}">
 <body>
   <div class="section"></div>
@@ -22,37 +22,28 @@
       <div class="container">
         <div class="z-depth-2 grey lighten-5 row" style="display: inline-block; padding: 32px 33px 0px 30px; border: 1px solid #EEE;">
         <img class="responsive-img" style="width: 150px;" src="{% static 'img/Logo_Colored_5.png' %}" />
-            
-          <form action="{% url 'loginuser' %}" class="col m12 s12" method="post">
-              {% csrf_token %}
             <div class='row'>
               <div class='col s12'>
               </div>
             </div>
-
-
             <div class='row'>
               <div class='input-field col m12 s12'>
-                <i class="material-icons iconis prefix">person</i>
-                {{ form.username }}
-                <label for='text'>Enter your username</label>
+                <label for='text'>Enter OTP:</label>
               </div>
             </div>
 
             <div class='row'>
               <div class='input-field col m12 s12'>
                 <i class="material-icons iconis prefix">lock</i>
-                {{ form.password }}
-                <label for='password'>Enter your password</label>
+                <input type="text" name="password" required="" id="otp" max="6">
               </div>
             </div>
             <br />
             <center>
               <div class='row'>
-                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect'>Login</button>
+                <button id="submitButton" type='submit' name='btn_login' class='col s12 btn btn-large waves-effect'>Submit</button>
               </div>
             </center>
-          </form>
         </div>
       </div>
     </center>
@@ -64,5 +55,16 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </body>
+
+<script>
+    $("#submitButton").click(function() {
+        if($("#otp").val() == ""){
+            alert("No OTP entered!")
+        }
+        else{
+            window.location = "/adminauthenticate/" + $("#otp").val();
+        }
+    });
+</script>
 
 </html>
